--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -2,25 +2,25 @@
 <h1>KEEP IMAGES IN SAME SIZE</h1>
 <div class="gallery">
 
-<a class="fancybox" rel="gallery1" href="images\1.jpg">
-	<img src="images\small\1.jpg" alt="" />
+<a class="fancybox" rel="gallery1" href="images/1.jpg">
+	<img src="images/small/1.jpg" alt="" />
 </a>
 
-<a class="fancybox" rel="gallery1" href="images\e5fe5d941f_56558252_o2.jpg">
-	<img src="images\small\e5fe5d941f_56558252_o2.jpg" alt="" />
+<a class="fancybox" rel="gallery1" href="images/e5fe5d941f_56558252_o2.jpg">
+	<img src="images/small/e5fe5d941f_56558252_o2.jpg" alt="" />
 </a>
-<a class="fancybox" rel="gallery1" href="images\nahaci.jpg">
-	<img src="images\small\nahaci.jpg" alt="" />
+<a class="fancybox" rel="gallery1" href="images/nahaci.jpg">
+	<img src="images/small/nahaci.jpg" alt="" />
 </a>
-<a class="fancybox" rel="gallery1" href="images\press_in_text0_305682645www.jpg">
-	<img src="images\small\press_in_text0_305682645www.jpg" alt="" />
+<a class="fancybox" rel="gallery1" href="images/press_in_text0_305682645www.jpg">
+	<img src="images/small/press_in_text0_305682645www.jpg" alt="" />
 </a>
-<a class="fancybox" rel="gallery1" href="images\reddeadre.jpg">
-	<img src="images\small\reddeadre.jpg" alt="" />
+<a class="fancybox" rel="gallery1" href="images/reddeadre.jpg">
+	<img src="images/small/reddeadre.jpg" alt="" />
 </a>
 
-<a class="fancybox" rel="gallery1" href="images\timthumb.php.jpg">
-	<img src="images\small\timthumb.php.jpg" alt="" />
+<a class="fancybox" rel="gallery1" href="images/timthumb.php.jpg">
+	<img src="images/small/timthumb.php.jpg" alt="" />
 </a>
 
 <a class="fancybox" rel="gallery1" href="http://farm4.staticflickr.com/3691/10185053775_701272da37_b.jpg">
