--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="cz">
 <head>
-<link rel="stylesheet" href="styles\jquery.fancybox.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="styles/jquery.fancybox.css" type="text/css" media="screen" />
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 
 <link rel="stylesheet" href="js/fancybox/fancyapps-fancyBox-18d1712/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
