--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <!--<p id = "width">show width<p>-->
 <p id = "seewidth"><p>
   <ul id="nav">
-  <li class="leaf  active"><a href="pages/home.html">Úvod</a></li>
+  <li class="leaf  active"><a href="pages/home.html">ÚVOD</a></li>
     <li class="root">
-	<div class="root-name">Prázdnota</div>
+	<div class="root-name">PRÁZDNOTA</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav">
 				<li class="leaf"><a href="pages/m1.html">Prázdno1</a></li>
@@ -42,7 +42,7 @@
 	</div>
 </li>
   <li class="root">
-	<div class="root-name">Druhá prázdnota</div>
+	<div class="root-name">DRUHÁ PRÁZDNOTA</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav">
 				<li class="leaf"><a href="pages/malby1.html">Prázdno1</a></li>
@@ -51,7 +51,7 @@
 			</ul>
 	</div>
 </li>
-  <li class="leaf"><a href="pages/gallery.html">Galerie</a></li>
+  <li class="leaf"><a href="pages/gallery.html">GALERIE</a></li>
 </ul>
 </div>
 <div id='c'>
