--- a/index.html
+++ b/index.html
@@ -28,34 +28,10 @@
 
 </head>
 <body>
-<div id="navside">
-<!--<p id = "width">show width<p>-->
-<p id = "seewidth"><p>
-  <ul id="nav">
-  <li class="leaf  active"><a href="pages/home.html">Úvod</a></li>
-    <li class="root">
-	<div class="root-name">Prázdnota</div>
-	<div class="submenu hidden" >
-			<ul id="submenu-nav">
-				<li class="leaf"><a href="pages/m1.html">Prázdno1</a></li>
-				<li class="leaf"><a href="pages/m2.html">Prázdno2</a></li>
-	</div>
-</li>
-  <li class="root">
-	<div class="root-name">Druhá prázdnota</div>
-	<div class="submenu hidden" >
-			<ul id="submenu-nav">
-				<li class="leaf"><a href="pages/malby1.html">Prázdno1</a></li>
-				<li class="leaf"><a href="pages/malby2.html">Prázdno2</a></li>
-				<li class="leaf"><a href="pages/malby3.html">Prázdno3</a></li>
-			</ul>
-	</div>
-</li>
-  <li class="leaf"><a href="pages/gallery.html">Galerie</a></li>
-</ul>
-</div>
+
 <div id='c'>
 <div id="container">
+Webpage is under construction and will be ready for you in the moment. Please try to access the page tomorrow.
 </div>
 </div>
 <div style= "width:100%; height:8%">
