--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 <div id='c'>
 <div id="container">
+  Webpage is under construction and will be ready for you in the moment. Please try to access the page tomorrow.
 </div>
 </div>
 <div style= "width:100%; height:8%">
