--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
 <script type="text/javascript" src="js/fancybox/fancyapps-fancyBox-18d1712/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 <title>Nina Grúňová</title>
-
 </head>
 <body>
-
 <div id='c'>
 <div id="container">
   Webpage is under construction and will be ready for you in the moment. Please try to access the page tomorrow.
 </div>
 </div>
-<div style= "width:100%; height:8%">
-</div>
+<div style= "width:100%; height:8%"></div>
 </body>
 
 </html>
