--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ _:-ms-fullscreen, :root * { font-family: "Courier New",monospace, sans-serif; }
 <div class="mobile-menu-button"></div>
 <div id="navside" class="navside">
 <ul id="nav" class="nav">
-    <li class="root">
+  <!--  <li class="root">
 	<div class="root-name">2017</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav" class="submenu-nav">
@@ -59,7 +59,7 @@ _:-ms-fullscreen, :root * { font-family: "Courier New",monospace, sans-serif; }
 				<li class="leaf"><a href="pages">PÁN A PES</a></li>
 				</ul>
 	</div>
-	</li>
+	</li> -->
     <li class="root">
 	<div class="root-name">2016</div>
 	<div class="submenu hidden" >
@@ -68,37 +68,37 @@ _:-ms-fullscreen, :root * { font-family: "Courier New",monospace, sans-serif; }
 				<li class="leaf"><a href="pages/2016_tihu_rasy.html">TÍHU ŘASY V DLANI TĚŽKAT</a></li>
 				<li class="leaf"><a href="pages/2016_eet.html">EET</a></li>
 				<li class="leaf"><a href="pages/2016_natahnout_a_uchopit.html">NATÁHNOUT A UCHOPIT</a></li>
-				<li class="leaf"><a href="pages/2016_ohybat_a_mnozit.html">OHÝBAT A MNOŽIT</a></li>
+				  <!--  <li class="leaf"><a href="pages/2016_ohybat_a_mnozit.html">OHÝBAT A MNOŽIT</a></li> -->
 				</ul>
 	</div>
 	</li>
 	    <li class="root">
-	<div class="root-name">2015</div>
+  <!--	<div class="root-name">2015</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav" class="submenu-nav">
-				<li class="leaf"><a href="pages/2015_AC_BC.html">KRESBY</a></li>
-				<li class="leaf"><a href="pages/2015_mavnutim.html">MALBA</a></li>
+				<li class="leaf"><a href="pages/2015_kresby.html">KRESBY</a></li>
+				<li class="leaf"><a href="pages/2015_malba.html">MALBA</a></li>
 				</ul>
 	</div>
-	</li>
+	</li> -->
 	    <li class="root">
 	<div class="root-name">2014</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav" class="submenu-nav">
-				<li class="leaf"><a href="pages/2014_apetky.html">DVAKRÁT DO STEJNÉ ŘEKY</a></li>
+				<li class="leaf"><a href="pages/2014_dvakrat_do_stejne.html">DVAKRÁT DO STEJNÉ ŘEKY</a></li>
 				<li class="leaf"><a href="pages/2014_podivna_atmosfera.html">PODIVNÁ ATMOSFÉRA</a></li>
 				</ul>
 	</div>
 	</li>
 	
 	<li class="root">
-	<div class="root-name">2013</div>
+	<!-- <div class="root-name">2013</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav" class="submenu-nav">
-				<li class="leaf"><a href="pages/2013_malirstvi.html">UŽ</a></li>
+				<li class="leaf"><a href="pages/2013_malirstvi.html">UŽ</a></li> 
 				</ul>
 	</div>
-	</li>
+	</li> -->
 	<li class="leaf"><a href="pages/CV.html">CV</a></li>
 	<li class="leaf"><a href="pages/contact.html">Contact</a></li>
 </ul>
