--- a/pages/2014_dvakrat_do_stejne.html
+++ b/pages/2014_dvakrat_do_stejne.html
@@ -1,10 +1,34 @@
 <html>
-   <h1></h1>
-   <h1>EET</h1><span class="location">Galerie Nika, Praha</span><br><br><div class="gallery"><a class="fancybox mezeraImage" rel="gallery1" href="images/2016/eet/1.jpg"><img class="image lazy" data-src="images/2016/eet/small/1.jpg" data-original="images/2016/eet/small/1.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2016/eet/2.jpg"><img class="image lazy" data-src="images/2016/eet/small/2.jpg" data-original="images/2016/eet/small/2.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2016/eet/3.jpg"><img class="image lazy" data-src="images/2016/eet/small/3.jpg" data-original="images/2016/eet/small/3.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2016/eet/4.jpg"><img class="image lazy" data-src="images/2016/eet/small/4.jpg" data-original="images/2016/eet/small/4.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2016/eet/5.jpg"><img class="image lazy" data-src="images/2016/eet/small/5.jpg" data-original="images/2016/eet/small/5.jpg" alt=""></a></div><br><br><p>Instalace v Galerii NIKA, reagující na nově zavedený
-      zákon o elektronické evidenci.
-      V instalaci je vystavená tiskárna na účtenky, která
-      tiskne dlouhý paragon na kterém jsou záznamy
-      s brněnskýmy podnikateli. Účtenka se tiskla až
-      do ukončení výstavy po dobu dvanásti hodin za
-      den(přibližně jeden svitek paragonu denně).<br><br></p>
+   <h1>DVAKRÁT DO STEJNÉ ŘEKY </h1><span class="location"></span><br><br><div class="gallery"><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/1.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/1.jpg" data-original="images/2014/dvakrat_do_reky/small/1.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/2.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/2.jpg" data-original="images/2014/dvakrat_do_reky/small/2.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/3.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/3.jpg" data-original="images/2014/dvakrat_do_reky/small/3.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/4.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/4.jpg" data-original="images/2014/dvakrat_do_reky/small/4.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/5.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/5.jpg" data-original="images/2014/dvakrat_do_reky/small/5.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/6.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/6.jpg" data-original="images/2014/dvakrat_do_reky/small/6.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/7.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/7.jpg" data-original="images/2014/dvakrat_do_reky/small/7.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/8.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/8.jpg" data-original="images/2014/dvakrat_do_reky/small/8.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/9.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/9.jpg" data-original="images/2014/dvakrat_do_reky/small/9.jpg" alt=""></a><a class="fancybox mezeraImage" rel="gallery1" href="images/2014/dvakrat_do_reky/10.jpg"><img class="image lazy" data-src="images/2014/dvakrat_do_reky/small/10.jpg" data-original="images/2014/dvakrat_do_reky/small/10.jpg" alt=""></a></div><br><br><p>Paměť minulosti, očekávání budoucnosti a pozornost
+      k přítomnosti tvoří řád většiny významných
+      ritualů, které se nám tak jeví především jako formy
+      určené k myšlení a řízení času.
+      Francouzský etnolog Marc Augé ve své eseji
+      Podoby zapomění, zpozoroval tři “figury” či
+      podoby zapomění. Figura návratu, přerušení a
+      znovu-začátku.
+      V této instalaci cituji fyguru přerušení, jejímž
+      hlavním cílem je “znovu nalézt přítomnost
+      a odříznout se přitom dočastně od minulosti
+      i budoucnosti, přesněji řečeno, zapomenout
+      na budoucnost natolik, nakolik je ztotožněna s
+      návratem minulého”.
+      Bez paměti nejsme schopni čas vnímat, ale
+      zároveň jsme nuceni zapomínat a zahalovat starší
+      zpomínky do mlhy, což vyvolává iluzi perspektivy.
+      Instalace kreseb ilustruje střetnutí vztahu
+      mezi časem a pamětí. Zahrunuje okolo šedesáti
+      kreseb, jejíchž motivem je muž v lodi, který nemá
+      vesla ani plachtu, aby mohl koordinovat svou loď.
+      “Muž v lodi” plovoucí po vodě je metaforou vztahu
+      člověka a času. Tento motiv jsem kreslila po dobu
+      4 měsíců. Dlouhé pauzy mezi jednotlivými kresbami,
+      předcházející díla přikrývají závojem nejistoty
+      a zapomění. Zapomění předešlých kreseb
+      omlazuje můj pohled na ty nadcházející, ale
+      zároveň čerpám ze zkušeností, které získávám
+      a nepřímo cituji v dalších kresbách. V této sérii
+      je to, co zapomínáme, již zpracovanou událostí
+      a určitou vnitřní matérií; nejde o nic absolutně či
+      nezávisle vnějšího, ale o výsledek prvotního zpracování.<br><br></p>
 </html>
