--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <![endif]-->
 <style type="text/css">
-_:-ms-fullscreen, :root * { font-family: "Courier New",monospace, sans-serif; }
+_:-ms-fullscreen, :root * {    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300; }
 </style>
 
 <!--[if !IE]-->
