--- a/pages/CV.html
+++ b/pages/CV.html
@@ -24,8 +24,8 @@
 2009 Vznešené lelkování, zámek Červená Řečice<br />
 <br />
 <b>Výstavy (samostatné)</b><br />
-2016 EET, NIKA, Prahar <br />
-2016 Bát se bát, Tvar, Brnor <br />
+2016 EET, NIKA, Praha <br />
+2016 Bát se bát, Tvar, Brno <br />
 2014 “Je tu cítit podivná atmosféra, jako by se od tebe něco očekávalo”, Galerie KonTex, Brno<br />
 2013 “Bachšiš”, Galerie 209, Brno<br />
 2013 “Jako Šelma”, Galerie Milana Zezuly, Brno<br />
