brno and italic more

--- a/pages/CV.html
+++ b/pages/CV.html
@@ -9,16 +9,16 @@
 2012 - 2016 ateliér Malířství 2 Luďek Rathouský; Fakulta Výtvarných umění BUT; Brno<br />
 2011 - 2012 studijní stáž, LˈÉcole Européenne Supérieure d’Art de Bretagne; Rennes, France<br />
 2010 – 2011 studijní stáž, video art, ateliér Video, Fakulta Výtvarných umění BUT; Brno<br />
-2009 - 2010 ateliér Malířství 2 Martin Mainer; Fakulta Výtvarných umění BUT<br />
+2009 - 2010 ateliér Malířství 2 Martin Mainer; Fakulta Výtvarných umění BUT; Brno<br />
 2005-09 Střední umělecká škola Grafická, Jihlava<br />
 <br />
 <b>Výstavy (skupinové)</b><br />
 2016 <i>存储</i>,galerie AMU, Praha<br />
-2016 Diplomanti FaVU, dům pánů z kunštátu<br />
+2016 Diplomanti FaVU, dům pánů z kunštátu; Brno<br />
 2015 <i>Jako obraz</i>, experimentální prostor NOD, Praha<br />
 2012 <i>la porte ouverte</i>, Rennes, France<br />
 2012 Sochařská výstava, Jihlava<br />
-2012 <i>ISWA projekt</i>, Praha, Grenoble, Berlin<br />
+2012 ISWA projekt, Praha, Grenoble, Berlin<br />
 2011 <i>Ahoj!!</i>, Galerie Jana Šmoka, Jihlava<br />
 2010 <i>Brno is Berlin</i>, ateliér Malba 2, Aula FAVU, Brno<br />
 2009 <i>Vznešené lelkování</i>, zámek Červená Řečice<br />
