--- a/pages/2016_natahnout_a_uchopit.html
+++ b/pages/2016_natahnout_a_uchopit.html
@@ -1,13 +1,14 @@
 <html>
    <h1>NATÁHNOUT A UCHOPIT</h1><span class="location">video socha, BRNO</span><br><br>
-   <div class="gallery"><a style= class="fancybox" rel="gallery1" href="images/2016/natahnout_uchopit/1.jpg"><img class="image lazy"  data-src="images/2016/natahnout_uchopit/small/1.jpg" data-original="images/2016/natahnout_uchopit/small/1.jpg" alt=""></a>
+   <div class="gallery"><a class="fancybox" rel="gallery1" href="images/2016/natahnout_uchopit/1.jpg"><img class="image lazy"  data-src="images/2016/natahnout_uchopit/small/1.jpg" data-original="images/2016/natahnout_uchopit/small/1.jpg" alt=""></a>
   </div>
   <iframe src="https://player.vimeo.com/video/167134915?title=0&amp;byline=0&amp;portrait=0;" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>  
    
    <br></br><br></br><br></br>
    
    
-   <div class="gallery"><a class="fancybox" rel="gallery1" href="images/2016/natahnout_uchopit/2.jpg"><img class="image lazy" data-src="images/2016/natahnout_uchopit/small/2.jpg" data-original="images/2016/natahnout_uchopit/small/2.jpg" alt=""></a></div>
+   <div class="gallery"><a class="fancybox" rel="gallery2" href="images/2016/natahnout_uchopit/2.jpg"><img class="image lazy" data-src="images/2016/natahnout_uchopit/small/2.jpg" data-original="images/2016/natahnout_uchopit/small/2.jpg" alt=""></a>
+   </div>
    
    <iframe src="https://player.vimeo.com/video/203030674?title=0&amp;byline=0&amp;portrait=0;" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
    
