--- a/pages/2016_natahnout_a_uchopit.html
+++ b/pages/2016_natahnout_a_uchopit.html
@@ -13,7 +13,7 @@
    <iframe src="https://player.vimeo.com/video/203030674?title=0&amp;byline=0&amp;portrait=0;" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
    
    </iframe><br><br><p>Video-socha na níž je záznam performativního pokusu
-      o “natáhnutí” času. Pomocí dechových cvyčení si
+      o “natáhnutí” času. Pomocí dechových cvičení si
       zpomaluji rychlost tepu a pokouším se o znehybnění
       po dobu jedné minuty, což vyžaduje zadržení dechu.<br><br></p>
 </html>
