--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@ _:-ms-fullscreen, :root * {    font-family: "HelveticaNeue-Light", "Helvetica Ne
 <div class="mobile-menu-button"></div>
 <div id="navside" class="navside">
 <ul id="nav" class="nav">
-  <!--  <li class="root">
+	    <li class="root">
 	<div class="root-name">2017</div>
 	<div class="submenu hidden" >
 			<ul id="submenu-nav" class="submenu-nav">
-
-				<li class="leaf"><a href="pages">PÁN A PES</a></li>
+				<li class="leaf"><a href="pages/2017_pan_a_pes.html">PÁN A PES</a></li>
+				<li class="leaf"><a href="pages/2017_skenovat.html">SKENOVAT VINU</a></li>
+				  <!--  <li class="leaf"><a href="pages/2016_ohybat_a_mnozit.html">OHÝBAT A MNOŽIT</a></li> -->
 				</ul>
 	</div>
-	</li> -->
+	</li>
     <li class="root">
 	<div class="root-name">2016</div>
 	<div class="submenu hidden" >
