nina_slusna change pivo atd

--- a/pages/2017_skenovat.html
+++ b/pages/2017_skenovat.html
@@ -1,7 +1,7 @@
 <html>
    <h1></h1>
-   <h1>SKENOVAT VINU</h1><span class="location">Nina Grúňová a František Fekete</span><br><br>
-   <span>Galerie Cyril, Prostějov</span><br><br>
+   <h1>SKENOVAT VINU</h1><span class="location">Nina Grúňová a František Fekete</span><br>
+   <span class="location">Galerie Cyril, Prostějov</span><br><br>
 
    <div class="gallery">
    <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/1.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/1.jpg" data-original="images/2017/skenovat/small/1.jpg" alt=""></a>
@@ -14,7 +14,5 @@
 Na výstave Skenovat vinu (Scan My Guilt) se ocitáme v jednom z mnoha Adamových obrazů pulzujícím jeho vinou, naší vinou. Stojíme a vnímáme hlasy, jeden tázací, druhý poskytující odpovědi. Ptáme se, kdo jsi? Co jsi udělal? Co je to vina? Snad pocit, mravní status, stav svědomí či kolektivního vědomí, nebo lidská konstrukce? Váže se vina k člověku, k jeho tělu, ke společnosti? A dá se vina vůbec popsat, exaktně zkoumat, vidět, přiznat, odpustit?
 <br><br>
 David Bartoš, kurátor
-<br><br>
-
 <br><br></p>
 </html>
