--- a/pages/2018_ReFill.html
+++ b/pages/2018_ReFill.html
@@ -1,19 +1,18 @@
 <html>
    <h1></h1>
-   <h1>SKENOVAT VINU</h1><span class="location">Nina Grúňová a František Fekete</span><br><br>
-   <span>Galerie Cyril, Prostějov</span><br><br>
+   <h1>ReFillMe</h1><span class="location">Nina Grúňová a František Fekete</span><br><br>
+
 
    <div class="gallery">
-   <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/1.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/1.jpg" data-original="images/2017/skenovat/small/1.jpg" alt=""></a>
-   <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/2.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/2.jpg" data-original="images/2017/skenovat/small/2.jpg" alt=""></a>
-   <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/3.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/3.jpg" data-original="images/2017/skenovat/small/3.jpg" alt=""></a>
-   <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/4.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/4.jpg" data-original="images/2017/skenovat/small/4.jpg" alt=""></a>
-   <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/5.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/5.jpg" data-original="images/2017/skenovat/small/5.jpg" alt=""></a>
-   <a class="fancybox mezeraImage" rel="gallery1" href="images/2017/skenovat/6.jpg"><img class="image lazy" data-src="images/2017/skenovat/small/6.jpg" data-original="images/2017/skenovat/small/6.jpg" alt=""></a>
-   </div><br><br><p>V 90. letech vznikl Adam. Na svět přišel poněkud zvláštním porodem – tělo vraha odsouzeného k trestu smrti bylo zalito gelem a zmraženo. Adam, vědecký objekt, byl následně rozřezán a naskenován do podoby digitálního fragmentálního obrazu. Tělo a duše člověka byla oddělena, avšak vina (exaktně prokázána soudem) zůstala, neboť vinu nejde omezit jakoukoliv hranicí. Vina putuje prostorem a z vraha se stal Adam, první člověk.
-Na výstave Skenovat vinu (Scan My Guilt) se ocitáme v jednom z mnoha Adamových obrazů pulzujícím jeho vinou, naší vinou. Stojíme a vnímáme hlasy, jeden tázací, druhý poskytující odpovědi. Ptáme se, kdo jsi? Co jsi udělal? Co je to vina? Snad pocit, mravní status, stav svědomí či kolektivního vědomí, nebo lidská konstrukce? Váže se vina k člověku, k jeho tělu, ke společnosti? A dá se vina vůbec popsat, exaktně zkoumat, vidět, přiznat, odpustit?
-<br><br>
-David Bartoš, kurátor
+   <a class="fancybox mezeraImage" rel="gallery1" href="images/2018/ReFillMe/1.jpg"><img class="image lazy" data-src="images/2018/ReFillMe/small/1.jpg" data-original="images/2018/ReFillMe/small/1.jpg" alt=""></a>
+   <a class="fancybox mezeraImage" rel="gallery1" href="images/2018/ReFillMe/2.jpg"><img class="image lazy" data-src="images/2018/ReFillMe/small/2.jpg" data-original="images/2018/ReFillMe/small/2.jpg" alt=""></a>
+   <a class="fancybox mezeraImage" rel="gallery1" href="images/2018/ReFillMe/3.jpg"><img class="image lazy" data-src="images/2018/ReFillMe/small/3.jpg" data-original="images/2018/ReFillMe/small/3.jpg" alt=""></a>
+   <a class="fancybox mezeraImage" rel="gallery1" href="images/2018/ReFillMe/4.jpg"><img class="image lazy" data-src="images/2018/ReFillMe/small/4.jpg" data-original="images/2018/ReFillMe/small/4.jpg" alt=""></a>
+ </div><br><br><p>Muži se schází u stolu...nostalgické okénko do minulosti národa...muži objednávají pivo...krize národa...muži se objímají...národní obrození...muži připíjejí...krize rodinny...muži se tváří blaženě...vábivý detail vychlazeného piva.
+
+Mediální obraz pivní kultury nám destiluje ideologická svědectví vládnoucí v naší společnosti. Pivo je tekutou situací doprovázející člověka po několik staletí a zlidovělo v symbol obrany národní a veřejné sféry, která je však v postideologické společnosti redukována na privátní problémy jednotlivců.
+
+Krizi veřejného prostoru a její důsledky, popisuje ve své publikaci Liquit modernity sociolog Zigmunt Bauman, který tvrdí, že růst nejistoty a křehkosti lidských vazeb přisuzuje zájem společnosti hledat bezpečí v uniformitě komunity založené na společné, zpravidla etnické, identitě. Tyto tendence, jsou spojeny s úpadkem národního státu, který ztrácí v éře tekuté modernity své dřívější role, vzdává se pozice poskytovatele bezpečí a jistot a vlivem globalizace ztrácí i svou suverenitu. Spojení národa a státu se vyčerpává. Identifikace se spotřebním zbožím a s módou se tak jeví jako přirozené útočiště tekutých jedinců hledajících dočastnou identitu. <br><br>
 <br><br>
 
 <br><br></p>
